レビュアーから人に遷移

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
 .app{
     padding: 48px;
 }
+.return{
+    border-radius: 8px;
+    font-size: 12px;
+    border: solid 2px #aaaaaa;
+    background-color: white;
+    padding: 4px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
 
 .header{
     border-bottom: solid 2px;
