--- a/css/book.css
+++ b/css/book.css
@@ -10,6 +10,7 @@
     padding: 4px;
     padding-left: 16px;
     padding-right: 16px;
+    cursor: pointer;
 }
 
 .bookData{
@@ -38,6 +39,9 @@
 .tbody{
     font-size: 13px;
     color: dimgray;
+}
+.user_name{
+    cursor: pointer;
 }
 
 .comment{
