--- a/css/employee.css
+++ b/css/employee.css
@@ -1,103 +1,140 @@
-.app{
+.app {
+    display: flex;
+    flex-direction: column;
     padding: 48px;
-}
-
-.return{
+    width: 100%;
+    max-width: 1272px;
+    margin: 0 auto;
+  }
+  
+  .title {
+    font-size: x-large;
+    margin-bottom: 20px;
+  }
+  
+  .return {
     border-radius: 8px;
     font-size: 12px;
     border: solid 2px #aaaaaa;
     background-color: white;
-    padding: 4px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 8px 16px;
     cursor: pointer;
-}
-.return:hover{
+    margin-bottom: 20px;
+    margin-left: 4px;
+  }
+  
+  .return:hover {
     background-color: #eeeeee;
-    cursor: pointer;
-}
-.return:active {
+  }
+  
+  .return:active {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.30);
-}
-
-.menuTab{
-    width:130px;
-    float: right;
-    border-radius: 8px;
+  }
+  
+  .menuTab {
+    width: 130px;
+    border-radius: 4px;
     font-size: 12px;
     border: solid 2px #aaaaaa;
     background-color: white;
-    padding: 4px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 2px;
-}
-.menuTab:hover{
+    padding: 4px 10px;
+    margin-left: auto;
+    margin-bottom: 20px;
+  }
+  
+  .menuTab:hover {
     background-color: #eeeeee;
-    cursor: pointer;
-}
-.menuTab:active {
+  }
+  
+  .menuTab:active {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.30);
-}
-.jobType{
+  }
+  
+  .filter {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: solid 2px #aaaaaa;
+    background-color: #f5f2f2;
+    border-radius: 8px;
+    height: 160px;
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 20px;
+  }
+  
+  .filterButton {
+    margin-top: 90px;
+  }
+  
+  .jobs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+    width: 190px;
+    height: 150px;
+    background-color : rgb(240, 236, 236) ;
+    margin:-100px
+  }
+  
+  .jobType {
+    text-align: center;
     font-size: 20px;
-    margin-bottom: 5px;
-}
-
-.header{
-    border-bottom: solid 2px;
-    border-color: #aaaaaa;
-    margin-bottom: 10px;
-    width: 1272px;
-}
-
-.tbody{
-    font-size: 13px;
-    color: dimgray;
-}
-.user_name{
-    cursor: pointer;
-}
-
-.employeesTable{
+  }
+  
+  .selectbox {
+    position: relative;
+    margin-top: 20px;
+  }
+  
+  .selectbox::before,
+  .selectbox::after {
+    position: absolute;
+    content: '';
+    pointer-events: none;
+  }
+  
+  .employeesTable {
     border-spacing: 0;
     border-collapse: collapse;
-    width: 400px;
-}
-
-.filter{
-    display: flex;
-    border-bottom: solid 2px;
-    border-color: #aaaaaa;
-    margin-bottom: 8px;
-}
-
-.year{
-    margin-right: 24px;
-}
-
-.filterButton{
-    margin-left: 36px;
-    margin-top: 94px;
-}
-
-.employees{
-    font-size: 20px;
-    margin-bottom: 5px;
-}
-
-.tableMain:hover{
-    background-color: #eeeeee;
-    cursor: pointer;
-}
-
-th{
+    width: 100%;
+    max-width: 800px;
+  }
+  
+  .tableHeader th {
     border: solid #aaaaaa 1px;
     padding: 8px;
-}
-
-td{
+  }
+  
+  .nameth {
+    width: 300px;
+  }
+  
+  .jobth {
+    width: 200px;
+  }
+  
+  .yearth {
+    width: 100px;
+  }
+  
+  .bookth {
+    width: 100px;
+  }
+  
+  .tableMain:hover {
+    background-color: #eeeeee;
+    cursor: pointer;
+  }
+  
+  th,
+  td {
     border: solid #aaaaaa 1px;
-    padding: 4px;
-    padding-left: 8px;
-}
+    padding: 8px;
+    text-align: center;
+  }
+  
+  .user_name {
+    cursor: pointer;
+  }
